--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -9,7 +9,7 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: v.$negro;
     color: v.$blanco;
 }
 *, *:before, *:after {
