--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -7,6 +7,9 @@
         grid-template-columns: repeat(2, 1fr);
         min-height: 100vh;
     } 
+    .imagen{
+        background: url('/public/build/img/1.jpg');
+    }
         
     
 }
