--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -16,6 +16,11 @@
             height: auto;
         }
     }
+    .app{
+        width: 95%;
+        margin: 0 auto;
+        padding: 3rem 0;
+    }
         
     
 }
