--- a/src/scss/componentes/_acciones.scss
+++ b/src/scss/componentes/_acciones.scss
@@ -4,8 +4,12 @@
 .acciones{
 
     margin-top: v.$separacion;
-    display: flex;
+  
 
+    @include m.desktop{
+        display: flex;
+        justify-content: center;
+    }
     @include m.tablet{
         display: flex;
         justify-content: center;
