--- a/src/scss/componentes/_formulario.scss
+++ b/src/scss/componentes/_formulario.scss
@@ -18,7 +18,8 @@
         border: none;
         padding: calc(v.$separacion / 4);
         border-radius: 10px;
-        
-
+        &:disabled{
+            background-color: lighten(v.$negro,50%);
+        }
     }
 }
