--- a/src/scss/componentes/_formulario.scss
+++ b/src/scss/componentes/_formulario.scss
@@ -20,6 +20,8 @@
         border-radius: 10px;
         &:disabled{
             background-color: lighten(v.$negro,70%);
+            color: v.$blanco;
+            cursor: not-allowed;
         }
     }
 }
