--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -14,7 +14,9 @@
         background-size: cover;
         background-position: center center;
         @include m.tablet{
-            height: 10rem;
+            height: 15rem;
+            background-size: cover;
+            background-position: center center;
         }
     }
     .app{
