--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -14,9 +14,8 @@
         background-size: cover;
         background-position: center center;
         @include m.tablet{
-            height: 15rem;
-            background-size: cover;
-            background-position: center center;
+            display: none;
+            
         }
     }
     .app{
