--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -14,7 +14,7 @@
         background-size: cover;
         background-position: center center;
         @include m.tablet{
-            display: none;
+            width: 100%;
             
         }
     }
