--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -15,6 +15,7 @@
         background-position: center center;
         @include m.tablet{
             width: 100%;
+            height: 100%;
             
         }
     }
