--- a/src/scss/componentes/_formulario.scss
+++ b/src/scss/componentes/_formulario.scss
@@ -18,6 +18,8 @@
         border: none;
         padding: calc(v.$separacion / 4);
         border-radius: 10px;
+        width: 10%;
+
         &:disabled{
             background-color: lighten(v.$negro,70%);
             color: v.$blanco;
