--- a/src/scss/componentes/_tabs.scss
+++ b/src/scss/componentes/_tabs.scss
@@ -13,5 +13,8 @@
         display: block;
         width: 100%;
         margin-bottom: 1rem;
+        :hover{
+            background-color: v.$verde;
+        }
     }
 }
