--- a/src/scss/componentes/_tabs.scss
+++ b/src/scss/componentes/_tabs.scss
@@ -12,7 +12,7 @@
         border: none;
         color: v.$blanco;
         padding: 1rem;
-        border-radius: 0.5rem;
+        border-radius: 5px 5px 0 0;
         display: block;
         width: 100%;
         margin-bottom: 1rem;
