--- a/src/scss/componentes/_tabs.scss
+++ b/src/scss/componentes/_tabs.scss
@@ -12,7 +12,8 @@
         border: none;
         color: v.$blanco;
         padding: 1rem;
-        border-radius: 5px 5px 0 0;
+        
+        border-top-left-radius: 5px;
         display: block;
         width: 100%;
         margin-bottom: 1rem;
