--- a/src/scss/componentes/_tabs.scss
+++ b/src/scss/componentes/_tabs.scss
@@ -12,8 +12,8 @@
         border: none;
         color: v.$blanco;
         padding: 1rem;
-        
-        border-top-left-radius: 5px;
+        border-radius: 0.5rem;
+        gap: 1rem;
         display: block;
         width: 100%;
         margin-bottom: 1rem;
