--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -16,8 +16,8 @@
         @include m.tablet{
            
             height: auto;
-            background-size: contain;
-            background-repeat: no-repeat;
+            // background-size: contain;
+            // background-repeat: no-repeat;
             
         }
     }
