--- a/src/scss/componentes/_tabs.scss
+++ b/src/scss/componentes/_tabs.scss
@@ -24,5 +24,9 @@
             background-color: darken(v.$azul, 10%);
             cursor: pointer;
         }
+        &.actual{
+            background-color: v.$blanco;
+            color: v.$azul;
+        }
     }
 }
