--- a/src/scss/layout/_cita.scss
+++ b/src/scss/layout/_cita.scss
@@ -1,11 +1,18 @@
 .seccion{
+    padding: 5rem 0;
+    display: none;
 
 
     .text-center{
         text-align: center;
     }
-    &:nth-child(2),
-    &:nth-child(3){
-        display: none;
-    }
+   
+}
+
+.mostar{
+    display: block;
+}  
+
+.ocultar{
+    display: none;
 }
