--- a/src/scss/layout/_cita.scss
+++ b/src/scss/layout/_cita.scss
@@ -6,13 +6,13 @@
     .text-center{
         text-align: center;
     }
-    .mostar{
-        display: block;
-    }  
-    
-    .ocultar{
-        display: none;
-    }
    
 }
 
+.mostar{
+    display: block;
+}  
+
+// .ocultar{
+//     display: none;
+// }
