--- a/src/scss/layout/_cita.scss
+++ b/src/scss/layout/_cita.scss
@@ -9,10 +9,10 @@
    
 }
 
-.mostar{
+.seccion .mostrar{
     display: block;
 }  
 
-// .ocultar{
-//     display: none;
-// }
+.ocultar{
+    display: none;
+}
