--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -13,7 +13,9 @@
         padding: 3rem;
         border-radius: 1rem;
         background-color: v.$blanco;
-     box-shadow: 0 0 1rem rgba(v.$negro, 0.1);
+        box-shadow: 0 0 1rem rgba(v.$negro, 0.1);
+        transition-property: transform;
+        transition-duration: 300ms;
         &:hover{
            transform: scale(1.05);
         }
