--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -21,7 +21,7 @@
         // si el servicio esta seleccionado
         &.seleccionado{
             background-color: v.$azul; 
-            color: v.$blanco;
+            // color: v.$blanco;
         }
 
         &:hover{
