--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -16,7 +16,7 @@
         box-shadow: 0 0 1rem rgba(v.$negro, 0.1);
         transition-property: transform;
         transition-duration: 300ms;
-        text-align: center;
+        // text-align: center;
 
         // si el servicio esta seleccionado
         &.seleccionado{
