--- a/src/scss/layout/_resumen.scss
+++ b/src/scss/layout/_resumen.scss
@@ -13,4 +13,7 @@
 }
 .contenedor-servicio{
     border-bottom: 1px solid v.$gris;
+    display: grid;
+    @include m.grid(2,2rem);
+    gap: 2rem;
 }
