--- a/src/scss/layout/_resumen.scss
+++ b/src/scss/layout/_resumen.scss
@@ -13,7 +13,7 @@
 }
 .contenedor-servicio{
     border-bottom: 1px solid v.$gris;
+    // dos columnas
     display: grid;
-    @include m.grid(2,2rem);
-    gap: 2rem;
+    grid-template-columns: 1fr 1fr;
 }
