--- a/src/scss/layout/_resumen.scss
+++ b/src/scss/layout/_resumen.scss
@@ -12,11 +12,13 @@
     }
 }
 .contenedor-servicio{
+    padding: 3rem 0;
+    border-top: 1px solid v.$gris;
     border-bottom: 1px solid v.$gris;
     // dos columnas
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
-    justify-content: center center;
+ 
 
 }
