--- a/src/scss/layout/_resumen.scss
+++ b/src/scss/layout/_resumen.scss
@@ -10,6 +10,11 @@
         font-size: 2.4rem;
 
     }
+    .titulo{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+    }
 }
 .contenedor-servicio{
     padding: 3rem 0;
