--- a/src/scss/layout/_resumen.scss
+++ b/src/scss/layout/_resumen.scss
@@ -2,6 +2,7 @@
 .contenido-resumen{
     p{
         margin-bottom: 1rem;
+        display: flex;
 
     }
     span{
@@ -10,11 +11,7 @@
         font-size: 2.4rem;
 
     }
-    .titulo{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
-    }
+    
 }
 .contenedor-servicio{
     padding: 3rem 0;
