--- a/src/scss/layout/_resumen.scss
+++ b/src/scss/layout/_resumen.scss
@@ -10,6 +10,12 @@
         font-size: 2.4rem;
 
     }
+    &.titulo{
+        display: grid;
+        gap: 2rem;
+        margin-bottom: 2rem;
+        grid-template-columns: 1fr 1fr;
+    }
     
 }
 .contenedor-servicio{
