--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -1,5 +1,5 @@
 @use 'variables' as v;
-// @use 'base/mixins' as m;
+@use 'mixins' as m;
 
 html {
     font-size: 62.5%;
@@ -8,7 +8,6 @@ html {
 }
 body {
     max-height: 100%;
-   
     display: flex;
     flex-direction: column;
     background-color: v.$negro;
