--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -27,6 +27,7 @@
         padding: 3rem 0;
         @include m.tablet{
            overflow: scroll;
+           height:100%;
         }
     }
         
