--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -7,7 +7,7 @@ html {
     height: 100%;
 }
 body {
-    max-height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     background-color: v.$negro;
