--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -26,8 +26,8 @@
         margin: 0 auto;
         padding: 3rem 0;
         @include m.tablet{
-           overflow: scroll;
-           height:100%;
+           overflow: hidden;
+          
         }
     }
         
