--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -7,13 +7,17 @@ html {
     height: 100%;
 }
 body {
-    min-height: 50%;
+    min-height: 100%;
+  
     display: flex;
     flex-direction: column;
     background-color: v.$negro;
     color: v.$blanco;
     font-family: v.$fuente_principal;
     font-size: 1.6rem;
+    @include m.tablet{
+    height: 100%;
+    } 
 }
 *, *:before, *:after {
     box-sizing: inherit;
