--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -47,3 +47,17 @@
     }
 
 }
+
+
+.barra-servicios{
+    margin-bottom: v.$separacion;
+    @include m.tablet{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+    .boton{
+        margin: 0 0 1rem 0;
+    }
+}
