--- a/src/scss/componentes/_acciones.scss
+++ b/src/scss/componentes/_acciones.scss
@@ -10,6 +10,7 @@
     @include m.tablet{
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
     a{
