--- a/src/scss/layout/_admin.scss
+++ b/src/scss/layout/_admin.scss
@@ -26,5 +26,13 @@
 .servicios{
 
     @extend .citas;
+    .acciones{
+        margin: 0;
+    }
+    .boton,
+    .boton-eliminar{
+        margin: 0;
+
+    }
 
 }
