--- a/src/scss/inicio/_inicio.scss
+++ b/src/scss/inicio/_inicio.scss
@@ -1,5 +1,4 @@
-@use 'base/variables' as v;
-// @use 'base/mixins' as m;
+
 
 .body{
     font-size: 1.6rem;
@@ -7,6 +6,6 @@
 }
 
 .header{
-   background-image:url('/public/build/img/2.jpg');
+   background-image:none;
     height: 60rem;
 }
