--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -1,38 +1,38 @@
 @use 'base/variables'as v;
 @use 'base/mixins' as m;
 
-// .contenedor-app{
-//     @include m.tablet{
-//         display: grid;
-//         grid-template-columns: repeat(2, 1fr);
-//         min-height: 100vh;
-//     } 
+.contenedor-app{
+    @include m.tablet{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        min-height: 100vh;
+    } 
   
-//     .imagen{
-//         height: 20rem;
-//         background: url('/public/build/img/2.jpg');
-//         background-size: cover;
-//         background-position: center center;
-//         @include m.tablet{
+    .imagen{
+        height: 20rem;
+        background: url('/public/build/img/2.jpg');
+        background-size: cover;
+        background-position: center center;
+        @include m.tablet{
            
-//             height: auto;
-//             // background-size: contain;
-//             // background-repeat: no-repeat;
+            height: auto;
+            // background-size: contain;
+            // background-repeat: no-repeat;
             
-//         }
-//     }
-//     .app{
-//         width: 95%;
-//         margin: 0 auto;
-//         padding: 3rem 0;
-//         @include m.tablet{
-//            overflow:auto;
+        }
+    }
+    .app{
+        width: 95%;
+        margin: 0 auto;
+        padding: 3rem 0;
+        @include m.tablet{
+           overflow:auto;
           
-//         }
-//     }
+        }
+    }
         
     
-// }
+}
 
 .barra{
     margin: v.$separacion 0;
