--- a/src/scss/inicio/_inicio.scss
+++ b/src/scss/inicio/_inicio.scss
@@ -1,11 +1,35 @@
+@use 'base/variables' as v;
+@use 'base/mixins' as m;
 
-
-.body{
-    font-size: 1.6rem;
-    line-height: 2;
-}
-
-.header{
-   background-image:none;
-    height: 60rem;
+.contenedor-app{
+    @include m.tablet{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        min-height: 100vh;
+    } 
+  
+    .imagen{
+        height: 20rem;
+        background: url('/public/build/img/2.jpg');
+        background-size: cover;
+        background-position: center center;
+        @include m.tablet{
+           
+            height: auto;
+            // background-size: contain;
+            // background-repeat: no-repeat;
+            
+        }
+    }
+    .app{
+        width: 95%;
+        margin: 0 auto;
+        padding: 3rem 0;
+        @include m.tablet{
+           overflow:auto;
+          
+        }
+    }
+        
+    
 }
