--- a/src/scss/inicio/_inicio.scss
+++ b/src/scss/inicio/_inicio.scss
@@ -2,11 +2,11 @@
 @use 'base/mixins' as m;
 
 .contenedor-app{
-    @include m.tablet{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        min-height: 100vh;
-    } 
+    // @include m.tablet{
+    //     display: grid;
+    //     grid-template-columns: repeat(2, 1fr);
+    //     min-height: 100vh;
+    // } 
   
     .imagen{
         height: 20rem;
