--- a/src/scss/inicio/_inicio.scss
+++ b/src/scss/inicio/_inicio.scss
@@ -2,13 +2,13 @@
 @use 'base/mixins' as m;
 
 .contenedor-app{
-    // @include m.tablet{
-    //     display: grid;
-    //     grid-template-columns: repeat(2, 1fr);
-    //     min-height: 100vh;
-    // } 
+    @include m.tablet{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        min-height: 100vh;
+    } 
   
-    .imagen{
+    .header{
         height: 20rem;
         background: url('/public/build/img/2.jpg');
         background-size: cover;
