--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -2,14 +2,34 @@
 @use 'base/mixins' as m;
 
 .contenedor-app{
-   
+    @include m.tablet{
+        display: grid;
+        grid-template-columns: repeat(0, 1fr);
+        min-height: 100vh;
+    } 
   
     .header{
         height: 20rem;
         background: url('/public/build/img/2.jpg');
-        
+        background-size: cover;
+        background-position: center center;
+        @include m.tablet{
+           
+            height: auto;
+            // background-size: contain;
+            // background-repeat: no-repeat;
+            
+        }
     }
-   
+    .app{
+        width: 95%;
+        margin: 0 auto;
+        padding: 3rem 0;
+        @include m.tablet{
+           overflow:auto;
+          
+        }
+    }
         
     
 }
