--- a/src/scss/inicio/_index.scss
+++ b/src/scss/inicio/_index.scss
@@ -10,7 +10,7 @@
     // }
 
     // Puedes mantener las otras reglas que no afectan la estructura
-    min-height: 100vh;
+    height: 100vh;
 
     .imagen {
         height: 20rem;
