--- a/src/scss/inicio/_index.scss
+++ b/src/scss/inicio/_index.scss
@@ -1,8 +1,11 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
+.contenedor-app {
+   display: block;
+ 
+}
 
-   .header{
-    background-color: saddlebrown;
-   }
-
+.header{
+ background-color: saddlebrown;
+}
