--- a/src/scss/inicio/_index.scss
+++ b/src/scss/inicio/_index.scss
@@ -3,9 +3,9 @@
 
 .contenedor-app {
    display: block;
- 
 }
 
 .header{
- background-color: saddlebrown;
+    background: url('/public/build/img/2.jpg');
+
 }
