--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -1,9 +1,34 @@
+@use 'base/variables' as v;
+@use 'base/mixins' as m;
 .contenedor-app{
-    display: block;
-    flex-direction: column;
-    height: 100%;
-}
-
-.header{
-    background-color: black;
+    @include m.tablet{
+        display: block;
+       
+        min-height: 100vh;
+    } 
+  
+    .imagen{
+        height: 20rem;
+        background: url('/public/build/img/2.jpg');
+        background-size: cover;
+        background-position: center center;
+        @include m.tablet{
+           
+            height: auto;
+            // background-size: contain;
+            // background-repeat: no-repeat;
+            
+        }
+    }
+    .app{
+        width: 95%;
+        margin: 0 auto;
+        padding: 3rem 0;
+        @include m.tablet{
+           overflow:auto;
+          
+        }
+    }
+        
+    
 }
