--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -7,7 +7,7 @@
         min-height: 100vh;
     } 
   
-    .imagen{
+    .header{
         height: 20rem;
         background: url('/public/build/img/2.jpg');
         background-size: cover;
