--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -11,6 +11,7 @@
         background: url('/public/build/img/2.jpg');
         background-size: cover;
         background-position: center center;
+        background-repeat: no-repeat;
        
     }
 }
