--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -6,6 +6,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         min-height: 100vh;
+        margin-top: 0;
     } 
   
     .imagen{
