--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -3,12 +3,12 @@
 .contenedor-app{
     
     display: block;
-    width: 100%;
+  margin-top: 0;
     
     
     .app-header{
-        margin-top: 0;
-        height: 20rem;
+        // margin-top: 0;
+        // height: 20rem;
         background: url('/public/build/img/2.jpg');
         background-size: cover;
         background-position: center center;
