--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -8,9 +8,8 @@
     
     .app-header{
         // margin-top: 0;
-        // height: 20rem;
         background: url('/public/build/img/2.jpg');
-        background-size: cover;
+        height: 60rem;
         background-position: center center;
         background-repeat: no-repeat;
        
