--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -7,6 +7,7 @@
     .app-header{
         background: url('/public/build/img/2.jpg');
         height: 60rem;
+        width: 100%;
         background-position: center center;
         background-repeat: no-repeat;
        
