--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -6,8 +6,8 @@
     margin-top: 0;
     .app-header{
         background: url('/public/build/img/2.jpg');
-        height: 60rem;
-        width: 100%;
+        // height: 60rem;
+        width: 60rem;
         background-position: center center;
         background-repeat: no-repeat;
        
