--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -3,7 +3,7 @@
 
 .header{
 
-    margin-top: 0;
+    margin: 0;
     .app-header{
         background: url('/public/build/img/2.jpg');
         // height: 60rem;
