--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -8,6 +8,7 @@
         background: url('/public/build/img/2.jpg');
         // height: 60rem;
         width: 100%;
+        background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
        
