--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -4,10 +4,10 @@
 .header{
 
     margin: 0;
+    height: 60rem;
     .app-header{
         background: url('/public/build/img/2.jpg');
-        // height: 60rem;
-        width: 100%;
+       
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
