--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -7,7 +7,7 @@
     height: 60rem;
     .app-header{
         background: url('/public/build/img/2.jpg');
-       
+        height: 60rem;
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
@@ -19,6 +19,6 @@
     display: block;
   margin-top: 0;
     
-    
+  height: 60rem;
    
 }
