--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -13,6 +13,12 @@
         background-repeat: no-repeat;
        
     }
+
+    .header__texto{
+        color: black;
+        text-align: center;
+        padding-top: 5rem;
+    }
 }
 .contenedor-app{
     
