--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -15,7 +15,7 @@
     }
 
     .header__texto{
-        color: black;
+        color: v.$negro;
         text-align: center;
         padding-top: 5rem;
     }
