--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -4,6 +4,7 @@
 .header{
 
     margin: 0;
+    color: black;
    
     .app-header{
         background: url('/public/build/img/2.jpg');
@@ -15,7 +16,6 @@
     }
 
     .header__texto{
-        color: v.$negro;
         text-align: center;
         padding-top: 5rem;
     }
