--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -7,7 +7,7 @@
    
    
     .app-header{
-        background: url('/public/build/img/2.jpg');
+        background: url('/public/build/img/fondo.jpg');
         height: 40rem;
         background-size: cover;
         background-position: center center;
