--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -12,13 +12,15 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-        color: black;
-       
+        
     }
-
+    
     .header__texto{
         text-align: center;
         padding-top: 5rem;
+        .no-margin{
+            color: black;
+        }
     }
 }
 .contenedor-app{
