--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -27,9 +27,9 @@
     
     display: block;
   margin-top: 0;
-  .imagen{
-    background-image: none;
-  }
+//   .imagen{
+//     background-image: none;
+//   }
     
 
    
