--- a/src/scss/layout/_inicio.scss
+++ b/src/scss/layout/_inicio.scss
@@ -1,4 +1,28 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
+.header{
 
+    margin: 0;
+   
+    .app-header{
+        background: url('/public/build/img/2.jpg');
+        height: 40rem;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+       
+    }
+
+    .header__texto{
+        color: bl;
+    }
+}
+.contenedor-app{
+    
+    display: block;
+  margin-top: 0;
+    
+
+   
+}
