--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -39,6 +39,9 @@
             font-weight: v.$bold;
             margin: 0;
         }
+        .odontologId{
+            color: red;
+        }
 
 
     }
