--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -40,8 +40,9 @@
             margin: 0;
         }
         .odontologId{
-            padding-top: .5rem;
-            color: red;
+            margin-top: .5rem;
+            color: v.$rojo;
+            text-align: center;
         }
 
 
