--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -38,7 +38,7 @@
             color: v.$azul;
             font-weight: v.$bold;
             margin: 0;
-            margin-top: .5rem;
+            padding: 1.5rem;
         }
         .odontologId{
             color: v.$rojo;
