--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -39,6 +39,7 @@
             font-weight: v.$bold;
             margin: 0;
             padding: 1.5rem;
+            text-align: center;
         }
         .odontologId{
             color: v.$rojo;
