--- a/src/scss/componentes/_botones.scss
+++ b/src/scss/componentes/_botones.scss
@@ -8,5 +8,5 @@
     @include m.boton(v.$rojo,v.$blanco);
 }
 .boton-whatsapp{
-    @include m.boton(v.$rojo,v.$blanco);
+    @include m.boton(v.$verde,v.$blanco);
 }
