--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -15,6 +15,7 @@ body {
     color: v.$blanco;
     font-family: v.$fuente_principal;
     font-size: 1.6rem;
+    margin: 1rem;
     @include m.tablet{
         height: 100%;
     } 
