--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -4,7 +4,9 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
-    height: 100%;
+    // height: 100%;
+    margin-left: 9rem;
+    margin-right: 9rem;
 }
 body {
     min-height: 100%;
