--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -7,10 +7,19 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$azul: #0da6f3;
+
 $rojo: #cb0000;
 $verde:#329f00;
 $negro: #1a1b15;
+
+// Colores
+$cyan: #0891B2;
+$azul: #2563EB;
+$indigo: #4338CA;
+$morado: #7C3AED;
+$naranja:#F59E0B;
+$rosa: #DB2777;
+
 
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
