--- a/src/scss/componentes/_formulario.scss
+++ b/src/scss/componentes/_formulario.scss
@@ -19,3 +19,26 @@
         }
     }
 }
+
+.formulario{
+    margin-top: 5rem;
+    .campo{
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+        label{
+            flex: 0 0 10rem ;
+
+        }
+        input{
+            flex: 1;
+            padding: 1rem;
+            border: none;
+            background-color:lighten(v.$gris,40%);
+            border-radius: 1rem;
+        }
+    
+    }
+    
+
+}
