--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -10,7 +10,7 @@
   
     .imagen{
         height: 20rem;
-        background: url('/public/build/img/2.jpg');
+        background: url('/public/build/img/odonto.jpg');
         background-size: cover;
         background-position: center center;
         @include m.tablet{
