--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -2,6 +2,15 @@
 @use 'base/mixins' as m;
 
 .contenedor-app{
+
+    // desktop
+    @include m.desktop{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        min-height: 100vh;
+    }
+
+
     @include m.tablet{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
