--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -45,6 +45,13 @@
 
 .barra{
     margin: v.$separacion 0;
+    // desktop
+    @include m.desktop{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
     @include m.tablet{
         display: flex;
         justify-content: space-between;
@@ -60,6 +67,15 @@
 
 .barra-servicios{
     margin-bottom: v.$separacion;
+
+    // desktop
+    @include m.desktop{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+
     @include m.tablet{
         display: flex;
         justify-content: space-between;
