--- a/src/scss/layout/_servicios.scss
+++ b/src/scss/layout/_servicios.scss
@@ -34,6 +34,7 @@
         p{
             color: v.$negro;
             margin: 0 0 calc(v.$separacion / 4) 0;
+            text-align: center;
         }
         .precio-servicio{ 
             color: v.$azul;
